<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <Button
        android:id="@+id/button3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_centerVertical="true"
        android:text="@string/home_help" 
        android:textColor="@color/txtcolor"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/home_quiz" 
        android:textColor="@color/txtcolor"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="20dp"
        android:text="@string/home_intro" 
        android:textColor="@color/txtcolor"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="20dp"
        android:text="@string/home_exit" 
        android:textColor="@color/txtcolor"/>

</RelativeLayout>